--- a/package.json
+++ b/package.json
@@ -40,11 +40,12 @@
     ]
   },
   "devDependencies": {
+    "@nomicfoundation/hardhat-chai-matchers": "^2.0.8",
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "@nomiclabs/hardhat-ethers": "^2.2.3",
     "@nomiclabs/hardhat-etherscan": "^3.1.8",
     "dotenv": "^16.4.5",
-    "ethers": "^6.7.0",
+    "ethers": "^5.7.2",
     "hardhat": "^2.22.16"
   }
 }
