--- a/package.json
+++ b/package.json
@@ -41,13 +41,14 @@
     ]
   },
   "devDependencies": {
-    "hardhat": "^2.22.16",
-    "@nomicfoundation/hardhat-chai-matchers": "^2.0.8",
-    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
-    "@nomicfoundation/hardhat-ethers": "^3.0.8",
-    "@nomicfoundation/hardhat-verify": "^2.0.1",
+    "@nomicfoundation/hardhat-chai-matchers": "2.0.8",
+    "@nomicfoundation/hardhat-toolbox": "5.0.0",
+    "@nomicfoundation/hardhat-ethers": "3.0.8",
+    "@nomicfoundation/hardhat-verify": "2.0.12",
     "dotenv": "^16.4.5",
-    "ethers": "^5.0.0"
+    "ethers": "6.13.4",
+    "hardhat": "2.22.16",
+    "mocha": "10.8.2"
   }
   
 }
