--- a/src/abi/config.json
+++ b/src/abi/config.json
@@ -1,3 +1,4 @@
 {
-    "NFTPLACE_CONTRACT_ADDRESS": "0x44Df2D11C8c2aff4E857bCE18b4d237Ea5E30601"
+    "NFTPLACE_CONTRACT_ADDRESS": "0x3dFd70f18e7A3ff5748c03c64b442D479c1046D6",
+    "MINT_CONTRACT_ADDRESS": "0x3dFd70f18e7A3ff5748c03c64b442D479c1046D6"
 }
