--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chainlink/contracts": "^1.3.0",
     "@google/model-viewer": "^4.0.0",
     "@openzeppelin/contracts": "^5.1.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "big-integer": "^1.6.52",
     "chai": "^4.5.0",
     "process": "^0.11.10",
     "react": "^18.3.1",
