--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^7.0.1",
     "react-scripts": "^5.0.1",
+    "sweetalert2": "^11.14.5",
     "web-vitals": "^2.1.4",
     "web3": "^4.15.0"
   },
