--- a/src/abi/config.json
+++ b/src/abi/config.json
@@ -1,4 +1,3 @@
 {
-    "NFTPLACE_CONTRACT_ADDRESS": "0xeBB428d727E25cb5605A34e7259C4835bB1aC7Df",
-    "MINT_CONTRACT_ADDRESS": "0xeBB428d727E25cb5605A34e7259C4835bB1aC7Df"
+    "CONTRACT_ADDRESS": "0x0684479658208c9e896a243a467d52c4C35F7B0B"
 }
